--- a/css/skills.css
+++ b/css/skills.css
@@ -12,7 +12,6 @@
 }
 
 .skills-intro-container{
-	position: absolute;
 	height: 100vh;
 	width: 100%;
 	display: flex;
@@ -21,7 +20,6 @@
 }
 
 .skills-intro-list{
-	position: absolute;
 	padding: 0px;
 	height: 100px;
 	width: var(--skills-intro-width);;
@@ -55,15 +53,10 @@
 		width: 100%;
 		border-bottom: 1px solid rgba(0,0,0,0);
 	}
-	99% {
-		height: 0px;
-		width: 100%;
-		border-bottom: 0px solid rgba(0,0,0,0);
-	}
 	100% {
 		height: 0px;
-		width: 0px;
-		border-bottom: 0px solid rgba(0,0,0,0);
+		width: 100%;
+		border-bottom: 1px solid rgba(0,0,0,0);
 	}
 
 }
@@ -119,20 +112,18 @@
 	bottom: 0px;
 }
 
-.skills-content .row-container{
+.skills-content > .row-container{
 	position: fixed;
-	height: 50vh;
-	width: 100vw;
+	height: 50%;
+	width: 100%;
 
 }
 
 .row-content{
 	position: relative;
-	margin-bottom: 0px !important;
-	padding-bottom: 0px !important;
 	height: 0vh;
 	width: 50%;
-	overflow-y: hidden;
+	overflow: hidden;
 	display:flex;
 	justify-content: center;
 	align-items: center;
@@ -154,13 +145,6 @@
 	z-index: 3;
 	margin-left: 20px;
 	right: 20px;
-}
-
-.tech{
-	position: absolute;
-	height: 50vh !important;
-	bottom: 0px;
-	margin-bottom: 0px !important
 }
 
 .row-content .descriptions{
